*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8674 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -112,35 +112,58 @@ foxtrick.LinksCoach.desc=﻿Tilføjer nogle eksterne links på ny træner siden
 foxtrick.LinksPlayerDetail.desc=﻿Tilføjer nogle eksterne links til spiller detalje siden
 foxtrick.LinksMatch.desc=﻿Tilføjer nogle eksterne links til kamp siden
 foxtrick.LinksTraining.desc=﻿Tilføjer nogle eksterne links til trænings siden
-foxtrick.LinksAlliances.desc=Adds some external links to the alliance page
-foxtrick.LinksNational.desc=Adds some external links to the national team page
-foxtrick.LinksFans.desc=Adds some external links to the fans page
-foxtrick.LinksPlayers.desc=Adds some external links to the players page
-foxtrick.LinksManager.desc=Adds some external links to the manager page
-foxtrick.LinksAchievements.desc=Adds some external links to the achievements page
-foxtrick.LinksStaff.desc=Adds some external links to the staff page
-foxtrick.LinksTracker.desc=Adds some external tracker links to the corresponding NT pages and player pages
-foxtrick.ForumAlterHeaderLine.desc=Alters posting header line
+foxtrick.LinksAlliances.desc=Tilføjer nogle eksterne links til forbunds side
+foxtrick.LinksNational.desc=Tilføjer nogle eksterne links til landsholds siden
+foxtrick.LinksFans.desc=Tilføjer nogle eksterne links til fans siden
+foxtrick.LinksPlayers.desc=Tilføjer nogle eksterne links til spiller siden
+foxtrick.LinksManager.desc=Tilføjer nogle eksterne links til manager side
+foxtrick.LinksAchievements.desc=Tilføjer nogle eksterne links til bedrifts siden
+foxtrick.LinksStaff.desc=Tilføjer nogle eksterne links til personale siden
+foxtrick.LinksTracker.desc=Tilføjer nogle eksterne tracker links til de tilsvarende landsholds og spiller sider
+foxtrick.LinksClubTransfers.desc=Tilføjer nogle eksterne links til klub transfer siden
+foxtrick.ForumAlterHeaderLine.desc=Ændrer overskrift linjen på indlæg
+foxtrick.Singleline2.desc=Alternativt Forum overskrift enkelt linie modul. Lidt hurtigere end de andre versioner. Deaktiverer nogle modstridende ændrings moduler ved forumindlæg.
 # please translate next lines again if needed
-foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Display only one posting header line. This option may break forum design. If you experience that, use 'normal skin', remove number of flags in the header or activate some of the following options.
-foxtrick.ForumAlterHeaderLine.TruncateLongNick.desc=Show only the first 10 (simple) / 14 (normal) characters of long user names and league names in forum posts. With CheckDesign on it's only done when needed.
-foxtrick.ForumAlterHeaderLine.TruncateLeagueName.desc=Show only the league level.
-foxtrick.ForumAlterHeaderLine.ShortPostId.desc=Remove postIDs, show only number of post (If using HT function, 'detailed header')
-foxtrick.ForumAlterHeaderLine.SmallHeaderFont.desc=Remove some spaces and use font size 10 for forum headers
+foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Viser kun én overskrifts linje. Denne indstilling kan bryde forum design. Hvis du oplever det, så brug standard tema, og aktivere nogle af følgende muligheder.
+foxtrick.ForumAlterHeaderLine.HideOldTime.desc=Skjuler tiden, hvis indlægget er fra dagen før eller ældre
+foxtrick.ForumAlterHeaderLine.TruncateLongNick.desc=Viser kun de første 10 (simple) / 14 (normal) tegn af lange alias i indlæg i forum. Når aktiveret, bliver det kun gjort når det er nødvendigt.
+foxtrick.ForumAlterHeaderLine.TruncateLeagueName.desc=Viser kun divisionen.
+foxtrick.ForumAlterHeaderLine.ShortPostId.desc=Fjern indlægsID, viser kun nummer af indlæg (Hvis du bruger HT-funktionen, &\#39;detaljeret indlægsoverskrift&\#39;)
+foxtrick.ForumAlterHeaderLine.SmallHeaderFont.desc=Fjerner noget mellemrum og bruger skriftstørrelse 10 til forum overskrifter
 foxtrick.ForumAlterHeaderLine.CheckDesign.desc=Check whether a single header line breaks the design and display that post in two lines if needed. This feature slows down display of the page.
-foxtrick.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Replaces supporter star image with an text * to save space
-foxtrick.AddDefaultFaceCard.desc=Adds a default face card to forum posts of users who didn't specify one
-foxtrick.OriginalFace.HideTransfer.desc=Shows the normal face card of transferlisted players
-foxtrick.OriginalFace.HideInjury.desc=Shows the normal face card of injured players
-foxtrick.OriginalFace.HideSuspended.desc=Shows the normal face card of suspended players
-foxtrick.OriginalFace.ColouredYouth.desc=Shows the youth face cards in full color
-foxtrick.PersonalityImages.desc=Add coloured numbers for popularity, character and psyche on the player page
-foxtrick.HideSignatures.desc=Hide the signatures in forum posts, display a 'Signature' link instead
-foxtrick.ForumNextAndPrevious.desc=Remove the 'Next' and 'Previous' buttons on forum threads if they are disabled
+foxtrick.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Erstatter supporter stjerne med tegnet * for at spare plads
+foxtrick.ForumAlterHeaderLine.BookmarkHeaderSmall.desc=Erstatter 'bogmærke post' ikonet med en mindre
+foxtrick.ForumAlterHeaderLine.HighlightThreadOpener.desc=Fremhæver-ID'erne for alle indlæg indsendt af tråd åbner
+foxtrick.AddDefaultFaceCard.desc=Vis en standard ansigt for brugere, som ikke har en i forum indlæg
+foxtrick.OriginalFace.desc=Vis oprindelige ansigt af spillere
+foxtrick.OriginalFace.HideTransfer.desc=Skjul til salg tegn på ansigter
+foxtrick.OriginalFace.HideInjury.desc=Skjul skadetegn på ansigter
+foxtrick.OriginalFace.HideSuspended.desc=Skjule suspenderings tegn på ansigter
+foxtrick.OriginalFace.ColouredYouth.desc=Vis ansigt i farver for ungdomsspillere (kan forårsage problemer på Windows Vista)
+foxtrick.ConfirmActions.desc=Bed brugeren om at bekræfte før visse handlinger
+foxtrick.ConfirmActions.Bid.desc=Byde på en spiller
+foxtrick.ConfirmActions.TransferList.desc=Sætte en spiller på transferlisten
+foxtrick.ConfirmActions.NtChange.desc=Tilføje/fjerne en afspiller til/fra landshold
+foxtrick.PersonalityImages.desc=Tilføj farvede tal for popularitet, karakter og psyke på spiller side
+foxtrick.HideSignatures.desc=Skjul signaturer i forum indlæg, vis et 'Signatur' hyperlink i stedet
+foxtrick.MarkUnread.desc=Tilføjer et link til at markere alle indlæg som ulæst fra den aktuelle indlæg
+foxtrick.ForumModeratorIconLinks.desc=Tilføj ikoner til at få adgang til moderator funktioner på toppen af ​​tråde, når de foreligger
+foxtrick.ForumNextAndPrevious.desc=Fjerne 'Næste' og 'Forrige' knapperne på forum tråde, hvis de er deaktiveret
+foxtrick.ForumLastPost.desc=Hop til sidste indlæg i stedet for at hoppe til den første, af læste tråde
+foxtrick.ForumLastPost.lastpage.desc=Gå til sidste side, ikke senest indlæg
 foxtrick.MatchPlayerColouring.desc=Colors the players depending on their team in the match report.
-foxtrick.ForumRedirManagerToTeam.desc=Redirect links from manager page to user page on forum links
-foxtrick.HTThreadMarker.desc=Marks threads created by HTs
-foxtrick.TeamStats.desc=Compiles an overview of team.
+foxtrick.MatchReportFormat.desc=Præsentation af kamprapporten linie for linie i henhold til kamp begivenheder.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Tilføj specifikke ikoner for begivenheder.
+foxtrick.ForumRedirManagerToTeam.desc=Omdirigere links fra manager side til hold side på forum links
+foxtrick.ManagerButtons.desc=Tilføje eller ændre manager knapper på manager og hold side
+foxtrick.ManagerButtons.GuestBook.desc=Tilføjer skrive i gæstebog link til manager og hold side
+foxtrick.HTThreadMarker.desc=Fremhæver tråde oprettet af HT'er
+foxtrick.TeamStats.desc=Udarbejder en oversigt over et holds spillere.
+foxtrick.TeamStats.General.desc=Generelle oplysninger (TSI/alder)
+foxtrick.TeamStats.Speciality.desc=Specialitet
+foxtrick.TeamStats.Personality.desc=Personlighed
+foxtrick.TeamStats.Status.desc=Status (kort/skader)
+foxtrick.TeamStats.Current_league.desc=Nuværende liga
 foxtrick.LargeFlags.desc=Replaces the tiny country flag on player pages with a large one
 foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page
@@ -640,7 +663,7 @@ minimum=Mindst
 maximum=Maksimum
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-foxtrick.RapidId.ViewById=Visning efter ID
+foxtrick.RapidId.ViewById=Vis efter ID
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Skift visningen af ​​tabellen.
