--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -75,6 +75,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Lisää ikoni juniorisarjaID\:lle
 foxtrick.ForumYouthIcons.enlarge_input.desc=Laajentaa tekstilaatikkoa paremman kirjoitusmukavuuden vuoksi.
 foxtrick.ForumYouthIcons.pre.desc=Lisää ikoni foorumin 'pre' formaatille
 foxtrick.ForumYouthIcons.table.desc=Lisää ikoni taulukolle. Custom tag accepts regular expresions (Mask  with additional , eg .).
+foxtrick.ForumYouthIcons.symbols.desc=Lisää kuvakkeen, josta voit lisätä allaolevia merkkejä. Erota merkit puolipisteillä. Lisätäksesi itse puolipisteen kirjoita /;
 foxtrick.ForumYouthIcons.settings.desc=Luo pikakuvakkeen Foxtrickin asetuksiin
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Korvaa FoxTrickin HT-ML-tagit HTML-tageilla (esim. 'pre'-elementti)
@@ -90,10 +91,12 @@ foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Upota Deviantart-kuvat
 foxtrick.EmbedMedia.EmbedGenericImages.desc=Upottaa kuvan, jos linkki on kuvaan
 foxtrick.EmbedMedia.EmbedGenericImagesClever.desc=Yritä arvata oikea kuva, vaikka alkuperäinen linkki ei osoitakaan siihen.
 #Forum direct page links
+foxtrick.DirectPageLinks.desc=Lisää linkin tietylle sivulle foorumipuussa.
 #
 foxtrick.CopyPostID.desc=ViestiId muutokset. Helpottaa foorumissa, kun haluat nopeasti kopioida ViestiIDn.
 foxtrick.CopyPosting.desc=Lisää ikoni viestin kopioimista varten sisältäen referenssit
 foxtrick.ShowForumPrefButton.desc=Linkki foorumiasetuksiin foorumin sivuilla
+foxtrick.Links.desc=Perusmoduuli joka vaaditaan muiden linkkimoduulien toimimiseksi kunnolla.
 foxtrick.LinksLeague.desc=Lisää joitain ulkoisia linkkejä sarjasivulle
 foxtrick.LinksTeam.desc=Lisää joitain ulkoisia linkkejä joukkuesivulle
 foxtrick.LinksCountry.desc=Lisää joitain ulkoisia linkkejä maasivulle
@@ -146,7 +149,7 @@ foxtrick.ConfirmActions.NtChange.desc=Lisäämallä/poistamalla pelaaja maajoukk
 foxtrick.ConfirmActions.StaffChange.desc=Palkkaamalla/erottamalla henkilökuntaa
 foxtrick.PersonalityImages.desc=Lisää pelaajan sivulle värjätyt numerot yhteistyökykyisyydelle, rehellisyydelle ja aggressiivisuudelle.
 foxtrick.HideSignatures.desc=Piilota allekirjoitukset foorumiviesteissä, näytä 'Allekirjoitus' sen sijaan linkkinä.
-foxtrick.MarkUnread.desc=Lisää linkin joka merkkaa kaikki viestit lukemattomiksi tästä viestistä alkaen
+foxtrick.MarkUnread.desc=Lisää linkin joka merkkaa kaikki viestit lukemattomiksi avatusta viestistä alkaen
 foxtrick.ForumModeratorIconLinks.desc=Lisää foorumipuiden alkuun kuvakkeita käytettävissä oleville moderaattoritoiminnoille
 foxtrick.ForumNextAndPrevious.desc=Poista 'Seuraava' ja 'Edellinen' napit foorumin keskustelupuista, jos niitä ei voi käyttää.
 foxtrick.ForumLastPost.desc=Hyppää viimeiseen viestiin ensimmäisen sijaan jo luetuissa puissa
@@ -200,6 +203,7 @@ foxtrick.FixcssProblems.RTL_Fixes.desc=Korjaa yhden HT virheen oikealta-vasemmal
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Lisää korjattu vierityspalkki foorumiin. Vähemmän häilyvä.
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Korjaa pieni fonttikoko yleisillä sivuilla normaalilla fonttikoolla.
 foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Poista 'Forum sneak-peek' kaikilta sivuilta.
+foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Automaattinen vähimmäiskorkeus kalenterissa tilan säästämiseksi.
 foxtrick.SimplePresentation.desc=Valinnaiset esitys -optiot
 foxtrick.SimplePresentation.League_Table.desc=Lisää pystysuorat rivit sarjapöytiin, helpompi lukea.
 foxtrick.SimplePresentation.Guestbook.desc=Kasvattaa luettavuutta vieraskirjassa (sisentää viestin harmaalla taustavärillä)
