Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8686 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1186,6 +1186,6 @@ foxtrick.prefs.AdditionalOptions=Додатне опције
 foxtrick.prefs.smallcopyicons=Убаци мале иконице за копирање у заглавље уместо посебног менија са стране
 foxtrick.prefs.DisplayHTMLDebugOutput=Прикажи додатне дебуг излазе на Хеттрик страници (за девелопере)
 
-foxtrick.prefs.permissionsHint=За %s је потребна дозвола да би радио. Дозволите приступ у наредном прозору.
+foxtrick.prefs.permissionsHint=За %s је потребна дозвола да би радио. Дозволите приступ у наредном прозору. Уколико не дозволите приступ, модул ће остати искључен.
 
 ###EOF
