Russian translation update to r8686
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8687 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,6 +1,6 @@
 #used by translators to keep track. not used with foxtrick atm
 properties.language=ru-RU
-properties.version=r8654
+properties.version=r8686
 properties.translators=_KOHb_ [teamId=28914]
 
 # Hints:
@@ -1186,6 +1186,6 @@ foxtrick.prefs.AdditionalOptions=Основные параметры
 foxtrick.prefs.smallcopyicons=Копия значков в заголовке вместо отдельного места на боковой панели
 foxtrick.prefs.DisplayHTMLDebugOutput=Показывать протокол работы FoxTrick в нижней части страниц (для отладки)
 
-foxtrick.prefs.permissionsHint=Модулю %s нужно разрешение для работы. Дайте ему доступ в следующем диалоге.
+foxtrick.prefs.permissionsHint=Модулю %s нужно разрешение для работы, дайте ему доступ в следующем диалоге. Если Вы откажете, данная функция модуля будет отключена.
 
 ###EOF
