*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8690 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -26,7 +26,7 @@ foxtrick.ForumTemplates.DefaultShow.desc=Viser eller skjuler dine skabeloner som
 foxtrick.ForumPreview.desc=Giver mulighed for at vise et indlæg forhåndvisning (virker også for mails, mærkater, annoncer og gæstebog)
 foxtrick.AddLeaveConfButton.desc=Tilføjer en  'Forlad konference' knap til hvert konference emne
 foxtrick.StarsCounter.desc=Tilføjer det totale antal af stjerne til kampopstillingssiden
-foxtrick.MoveLinks.desc=Flytter managerens liga og flag links, til 'emne bjælken'. Husk\: 'Show avatar' funktionen i Hattrick  skal være sat til, for at det virker\!
+foxtrick.MoveLinks.desc=Flytter managerens liga og flag links, til 'indlægs overskriften'. Husk\: 'Vis brugerikoner og info' funktionen i Hattrick  skal være sat til, for at det virker\!
 #AttVsDef
 foxtrick.AttVsDef.desc=Adds attack/defense comparison to the match page
 foxtrick.AttVsDef.oldstyle.desc=gammel stil
@@ -126,14 +126,14 @@ foxtrick.Singleline2.desc=Alternativt Forum overskrift enkelt linie modul. Lidt 
 # please translate next lines again if needed
 foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Viser kun én overskrifts linje. Denne indstilling kan bryde forum design. Hvis du oplever det, så brug standard tema, og aktivere nogle af følgende muligheder.
 foxtrick.ForumAlterHeaderLine.HideOldTime.desc=Skjuler tiden, hvis indlægget er fra dagen før eller ældre
-foxtrick.ForumAlterHeaderLine.TruncateLongNick.desc=Viser kun de første 10 (simple) / 14 (normal) tegn af lange alias i indlæg i forum. Når aktiveret, bliver det kun gjort når det er nødvendigt.
+foxtrick.ForumAlterHeaderLine.TruncateLongNick.desc=Viser kun de første 10 (simple) / 14 (normal) tegn af lange brugernavn i indlæg i forum. Når aktiveret, bliver det kun gjort når det er nødvendigt.
 foxtrick.ForumAlterHeaderLine.TruncateLeagueName.desc=Viser kun divisionen.
-foxtrick.ForumAlterHeaderLine.ShortPostId.desc=Fjern indlægsID, viser kun nummer af indlæg (Hvis du bruger HT-funktionen, &\#39;detaljeret indlægsoverskrift&\#39;)
+foxtrick.ForumAlterHeaderLine.ShortPostId.desc=Fjern indlægsID, viser kun nummer af indlæg (Hvis du bruger HT-funktionen, 'detaljeret indlægsoverskrift')
 foxtrick.ForumAlterHeaderLine.SmallHeaderFont.desc=Fjerner noget mellemrum og bruger skriftstørrelse 10 til forum overskrifter
 foxtrick.ForumAlterHeaderLine.CheckDesign.desc=Check whether a single header line breaks the design and display that post in two lines if needed. This feature slows down display of the page.
 foxtrick.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Erstatter supporter stjerne med tegnet * for at spare plads
 foxtrick.ForumAlterHeaderLine.BookmarkHeaderSmall.desc=Erstatter 'bogmærke post' ikonet med en mindre
-foxtrick.ForumAlterHeaderLine.HighlightThreadOpener.desc=Fremhæver-ID'erne for alle indlæg indsendt af tråd åbner
+foxtrick.ForumAlterHeaderLine.HighlightThreadOpener.desc=Fremhæver-ID'erne for alle indlæg indsendt af tråd starter
 foxtrick.AddDefaultFaceCard.desc=Vis en standard ansigt for brugere, som ikke har en i forum indlæg
 foxtrick.OriginalFace.desc=Vis oprindelige ansigt af spillere
 foxtrick.OriginalFace.HideTransfer.desc=Skjul til salg tegn på ansigter
@@ -143,7 +143,7 @@ foxtrick.OriginalFace.ColouredYouth.desc=Vis ansigt i farver for ungdomsspillere
 foxtrick.ConfirmActions.desc=Bed brugeren om at bekræfte før visse handlinger
 foxtrick.ConfirmActions.Bid.desc=Byde på en spiller
 foxtrick.ConfirmActions.TransferList.desc=Sætte en spiller på transferlisten
-foxtrick.ConfirmActions.NtChange.desc=Tilføje/fjerne en afspiller til/fra landshold
+foxtrick.ConfirmActions.NtChange.desc=Tilføje/fjerne en spiller til/fra landshold
 foxtrick.PersonalityImages.desc=Tilføj farvede tal for popularitet, karakter og psyke på spiller side
 foxtrick.HideSignatures.desc=Skjul signaturer i forum indlæg, vis et 'Signatur' hyperlink i stedet
 foxtrick.MarkUnread.desc=Tilføjer et link til at markere alle indlæg som ulæst fra den aktuelle indlæg
