--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -518,6 +518,7 @@ Filters.Form=Form
 Filters.XP=Erfahrung
 Filters.specialty=Spezialität
 Filters.stars=Sterne
+Filters.addFilterOptions=Filteroptionen hinzufügen
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -1010,6 +1011,7 @@ sort.up=Hoch
 sort.down=Runter
 action.clearCache=Cache leeren
 action.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bedarf zusätzliche Informationen von Hattricks Servern. Bis zum nächsten Neustart des Browsers benutzt FoxTrick lokal gespeicherte Kopien dieser Daten. Gelegendlich können diese nicht mehr aktuell sein. Lösche den Cache, falls FoxTrick die Zusatzdaten erneut laden soll.
+featureHighlight.title=Klicken um die meisten Foxtrick-Elemente farblich hervorzuheben
 
 # fennec ui
 pageAction.all=Zeige alles
