--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -81,6 +81,7 @@ foxtrick.ForumYouthIcons.settings.desc=Luo pikakuvakkeen Foxtrickin asetuksiin
 foxtrick.FormatPostingText.desc=Korvaa FoxTrickin HT-ML-tagit HTML-tageilla (esim. 'pre'-elementti)
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Näyttää sisäkkäiset lainaukset spoilerissa. Määritä taso alla.
 #EmbedMedia
+foxtrick.EmbedMedia.desc=Havaitsee linkit mediatiedostoihin ja upottaa ne sivustolle. (Kokeiluvaiheessa)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Upotetut Youtube-videot
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Upotetut Vimeo-videot
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Upotetut FunnyOrDie-videot
@@ -251,6 +252,7 @@ foxtrick.ContextMenuCopy.Table.desc=Valinta taulukon kopioimiseksi HT-ML-muodoss
 foxtrick.NewMail.desc=Korostaa saapuneet viesit ja foorumiviestit
 foxtrick.NewMail.NotifyMail.desc=Näytä huomautus, jos sinulle on uusia viestejä
 foxtrick.NewMail.NotifyForum.desc=Näytä huomautus, jos sinulle on uusia foorumivastauksia
+foxtrick.CopyYouth.desc=Junnuraporttien ja lähdekoodin kopiointitoimintoja
 foxtrick.CopyYouth.TrainingReport.desc=Mahdollistaa harjoitusraportin kopioimisen. Eli lisää Kopioi Harjoitusraportti (käytettävissä mm. Hattrick Youth Clubissa) painike juniorijoukkueen harjoittelusivulle.
 foxtrick.CopyYouth.ScoutComment.desc=Mahdollistaa skoutin raportin kopioimisen. (käytetään hattrick youthclubissa mm.) Eli lisää painike junioripelaajan sivulle skouttiraportin kopioimista varten.
 foxtrick.CopyYouth.RejectedToHTY.desc=Kopioi skoutin kommentit ja avaa HT-Youthclub kun pelaaja torjutaan
@@ -694,7 +696,7 @@ Last_stars_decline.abbr=Ero
 Last_position=Viimeisin pelipaikka
 Last_position.abbr=Pp
 #following string uses pluralForms
-Last_match_played_as_at=Pelasi pelipaikalla %2 %1 minuuttia viime ottelussaan joukkueessa %3.
+Last_match_played_as_at=Pelasi pelipaikalla %2 %1 minuuttia viime ottelussaan päivänä %3.
 Last_match_didnot_play=Ei ole vielä pelannut.
 
 Bruised=Kolhiintunut
@@ -727,7 +729,7 @@ Current_league=Nykyinen sarja
 Current_league.abbr=Sarja
 
 JoinedSince=Liittynyt
-JoinedSince.abbr=Tullut
+JoinedSince.abbr=Liittynyt
 
 Hotlist=Kuuma lista
 Hotlist.abbr=Kuuma
@@ -822,6 +824,7 @@ CopyYouth.playerSource=Kopioi pelaajan lähdekoodi
 CopyYouth.playerSource.copied=Pelaajasivun lähdekoodi kopioitu.
 CopyYouth.fixturesSource=Kopioi otteluohjelmasivun lähdekoodi
 CopyYouth.fixturesSource.copied=Otteluohjelmasivun lähdekoodi on kopioitu.
+CopyYouth.goto=Mene\: %s
 
 MatchReportFormat.MatchReport=Otteluraportti
 MatchReportFormat.lineup=Kokoonpano
@@ -951,6 +954,7 @@ foxtrick.RapidId.ViewById=Katso ID\:llä
 foxtrick.SkillTable.Switch_view_title=Vaihda taulukon näkymää
 foxtrick.SkillTable.Add_homegrown_title=Lisää kaikki kasvattipelaajat nykyjoukkueesta
 foxtrick.SkillTable.showTimeInClub_title=Näyttää pelaajan edustusjoukkueessa viettämän ajan
+foxtrick.SkillTable.detach=Irrota
 
 # HTMSPrediction
 HTMSPrediction.prediction=Arvioitu tulos
