--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -427,6 +427,7 @@ foxtrick.TeamStats.NotTransferListed.label=Niet op transferlijst
 foxtrick.TeamStats.ActivePlayers.label=Actieve spelers
 foxtrick.TeamStats.HomeGrownPlayers.label=Eigen spelers
 foxtrick.TeamStats.PurchasedPlayers.label=Gekochte spelers
+foxtrick.TeamStats.FilterFor=Filter voor
 
 #season stats
 #note to translators. use abreviations of league table where applicable
